# caliptra-sw

./: Cargo.toml  README.md
.github/workflows/: build-test-verilator.yml  build-test.yml  nightly-release.yml  nightly-verilator.yml  publish-website.yml  size-history.yml  smoke-test-verilator.yml
builder/: Cargo.toml
builder/src/: firmware.rs  lib.rs  sha256.rs
ci-tools/fargo/: Cargo.toml
ci-tools/fargo/src/: main.rs
ci-tools/fpga-boss/: Cargo.toml  crossbuild.sh
ci-tools/fpga-image/: build.sh  gha-runner.service  launch-runner.sh  startup-script.sh
ci-tools/test-matrix/: Cargo.toml
drivers/src/: csrng.rs  data_vault.rs  doe.rs  ecc384.rs  error_reporter.rs  exit_ctrl.rs  fuse_bank.rs  hmac384.rs  key_vault.rs  lib.rs  lms.rs  mailbox.rs  pcr_bank.rs  reset.rs  sha256.rs  sha384.rs  sha384acc.rs  soc_ifc.rs  uart.rs
drivers/test-fw/: Cargo.toml
drivers/tests/: integration_tests.rs
error/src/: lib.rs
fmc/src/: fmc_env.rs  main.rs
fmc/tests/: test_rtalias.rs
hw-latest/fpga/: fpga_configuration.tcl
hw-latest/fpga-sync/: .gitignore  fpga_configuration.tcl
hw-latest/verilated/: caliptra_verilated.h  caliptra_verilated.sv
hw-model/: Cargo.toml
hw-model/src/: lib.rs  mmap.rs  model_emulated.rs  model_fpga_sync.rs  model_verilated.rs  output.rs
hw-model/test-fw/: mailbox_responder.rs  mailbox_sender.rs  test_iccm_write_locked.rs
registers/src/: csrng.rs  doe.rs  dv.rs  ecc.rs  entropy_src.rs  hmac.rs  kv.rs  lib.rs  mbox.rs  pv.rs  sha256.rs  sha512.rs  sha512_acc.rs  soc_ifc.rs  soc_ifc_trng.rs  (+2 more)
runtime/: Cargo.toml
test/: Cargo.toml
(+88 files in other folders)
