# Licensed under the Apache-2.0 license

[package]
name = "fargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caliptra-builder.workspace = true
caliptra-builder.sha256 = true
cargo_metadata.workspace = true